電卓ボタンの骨子作成

--- a/index.html
+++ b/index.html
@@ -13,6 +13,93 @@
 
 <body>
   <div class="main">
+    <div class="panel">
+      <div class="history">
+
+      </div>
+      <div class="result">
+
+      </div>
+      <div class="buttons">
+        <div>
+          <table>
+            <table>
+              <tr>
+                <td>
+                  <div>(</div>
+                </td>
+                <td>
+                  <div>)</div>
+                </td>
+                <td>
+                  <div>%</div>
+                </td>
+                <td>
+                  <div>AC</div>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <div>7</div>
+                </td>
+                <td>
+                  <div>8</div>
+                </td>
+                <td>
+                  <div>9</div>
+                </td>
+                <td>
+                  <div>÷</div>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <div>4</div>
+                </td>
+                <td>
+                  <div>5</div>
+                </td>
+                <td>
+                  <div>6</div>
+                </td>
+                <td>
+                  <div>×</div>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <div>3</div>
+                </td>
+                <td>
+                  <div>2</div>
+                </td>
+                <td>
+                  <div>1</div>
+                </td>
+                <td>
+                  <div>−</div>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <div>0</div>
+                </td>
+                <td>
+                  <div>.</div>
+                </td>
+                <td>
+                  <div>=</div>
+                </td>
+                <td>
+                  <div>+</div>
+                </td>
+              </tr>
+            </table>
+          </table>
+
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 
