--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- フォント -->
-  <link href="">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> -->
+
   <!-- スタイルシート -->
   <link rel="stylesheet" href="css/styles.css">
   <title>電卓</title>
@@ -13,91 +14,50 @@
 
 <body>
   <div class="main">
+
     <div class="panel">
       <div class="history">
 
       </div>
       <div class="result">
-
+        <input type="text" class="hogehoge">
       </div>
-      <div class="buttons">
-        <div>
-          <table>
-            <table>
-              <tr>
-                <td>
-                  <div>(</div>
-                </td>
-                <td>
-                  <div>)</div>
-                </td>
-                <td>
-                  <div>%</div>
-                </td>
-                <td>
-                  <div>AC</div>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <div>7</div>
-                </td>
-                <td>
-                  <div>8</div>
-                </td>
-                <td>
-                  <div>9</div>
-                </td>
-                <td>
-                  <div>÷</div>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <div>4</div>
-                </td>
-                <td>
-                  <div>5</div>
-                </td>
-                <td>
-                  <div>6</div>
-                </td>
-                <td>
-                  <div>×</div>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <div>3</div>
-                </td>
-                <td>
-                  <div>2</div>
-                </td>
-                <td>
-                  <div>1</div>
-                </td>
-                <td>
-                  <div>−</div>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <div>0</div>
-                </td>
-                <td>
-                  <div>.</div>
-                </td>
-                <td>
-                  <div>=</div>
-                </td>
-                <td>
-                  <div>+</div>
-                </td>
-              </tr>
-            </table>
-          </table>
+    </div>
 
-        </div>
+    <div class="calc-buttons">
+      <div class="test">
+        <table>
+          <tr>
+            <td class="button bg-color-1 tx-color-1">(</td>
+            <td class="button bg-color-1 tx-color-1">)</td>
+            <td class="button bg-color-1 tx-color-1">%</td>
+            <td class="button bg-color-1 tx-color-1">AC</td>
+          </tr>
+          <tr>
+            <td class="button bg-color-2 tx-color-1">7</td>
+            <td class="button bg-color-2 tx-color-1">8</td>
+            <td class="button bg-color-2 tx-color-1">9</td>
+            <td class="button bg-color-1 tx-color-1">÷</td>
+          </tr>
+          <tr>
+            <td class="button bg-color-2 tx-color-1">4</td>
+            <td class="button bg-color-2 tx-color-1">5</td>
+            <td class="button bg-color-2 tx-color-1">6</td>
+            <td class="button bg-color-1 tx-color-1">×</td>
+          </tr>
+          <tr>
+            <td class="button bg-color-2 tx-color-1">3</td>
+            <td class="button bg-color-2 tx-color-1">2</td>
+            <td class="button bg-color-2 tx-color-1">1</td>
+            <td class="button bg-color-1 tx-color-1">−</td>
+          </tr>
+          <tr>
+            <td class="button bg-color-2 tx-color-1">0</td>
+            <td class="button bg-color-2 tx-color-1">.</td>
+            <td class="button bg-color-3 tx-color-2">=</td>
+            <td class="button bg-color-1 tx-color-1">+</td>
+          </tr>
+        </table>
       </div>
     </div>
   </div>
