関数電卓ボタン配置

--- a/index.html
+++ b/index.html
@@ -28,34 +28,49 @@
       <div class="test">
         <table>
           <tr>
-            <td class="button bg-color-1 tx-color-1">(</td>
-            <td class="button bg-color-1 tx-color-1">)</td>
-            <td class="button bg-color-1 tx-color-1">%</td>
-            <td class="button bg-color-1 tx-color-1">AC</td>
+            <td class="button bg-color-1 tx-color-1 sc-calc"><div>Rad</div></td>
+            <td class="button bg-color-1 tx-color-3 sc-calc"><div>Deg</div></td>
+            <td class="button bg-color-1 tx-color-1 sc-calc"><div>x!</div></td>
+            <td class="button bg-color-1 tx-color-1"><div>(</div></td>
+            <td class="button bg-color-1 tx-color-1"><div>)</div></td>
+            <td class="button bg-color-1 tx-color-1"><div>%</div></td>
+            <td class="button bg-color-1 tx-color-1"><div>AC</div></td>
           </tr>
           <tr>
-            <td class="button bg-color-2 tx-color-1">7</td>
-            <td class="button bg-color-2 tx-color-1">8</td>
-            <td class="button bg-color-2 tx-color-1">9</td>
-            <td class="button bg-color-1 tx-color-1">÷</td>
+            <td class="button bg-color-1 tx-color-1 sc-calc"><div>Inv</div></td>
+            <td class="button bg-color-1 tx-color-1 sc-calc"><div>sin</div></td>
+            <td class="button bg-color-1 tx-color-1 sc-calc"><div>ln</div></td>
+            <td class="button bg-color-2 tx-color-1"><div>7</div></td>
+            <td class="button bg-color-2 tx-color-1"><div>8</div></td>
+            <td class="button bg-color-2 tx-color-1"><div>9</div></td>
+            <td class="button bg-color-1 tx-color-1"><div>÷</div></td>
           </tr>
           <tr>
-            <td class="button bg-color-2 tx-color-1">4</td>
-            <td class="button bg-color-2 tx-color-1">5</td>
-            <td class="button bg-color-2 tx-color-1">6</td>
-            <td class="button bg-color-1 tx-color-1">×</td>
+            <td class="button bg-color-1 tx-color-1 sc-calc"><div>π</div></td>
+            <td class="button bg-color-1 tx-color-1 sc-calc"><div>cos</div></td>
+            <td class="button bg-color-1 tx-color-1 sc-calc"><div>log</div></td>
+            <td class="button bg-color-2 tx-color-1"><div>4</div></td>
+            <td class="button bg-color-2 tx-color-1"><div>5</div></td>
+            <td class="button bg-color-2 tx-color-1"><div>6</div></td>
+            <td class="button bg-color-1 tx-color-1"><div>×</div></td>
           </tr>
           <tr>
-            <td class="button bg-color-2 tx-color-1">3</td>
-            <td class="button bg-color-2 tx-color-1">2</td>
-            <td class="button bg-color-2 tx-color-1">1</td>
-            <td class="button bg-color-1 tx-color-1">−</td>
+            <td class="button bg-color-1 tx-color-1 sc-calc"><div>e</div></td>
+            <td class="button bg-color-1 tx-color-1 sc-calc"><div>tan</div></td>
+            <td class="button bg-color-1 tx-color-1 sc-calc"><div>√</div></td>
+            <td class="button bg-color-2 tx-color-1"><div>3</div></td>
+            <td class="button bg-color-2 tx-color-1"><div>2</div></td>
+            <td class="button bg-color-2 tx-color-1"><div>1</div></td>
+            <td class="button bg-color-1 tx-color-1"><div>−</div></td>
           </tr>
           <tr>
-            <td class="button bg-color-2 tx-color-1">0</td>
-            <td class="button bg-color-2 tx-color-1">.</td>
-            <td class="button bg-color-3 tx-color-2">=</td>
-            <td class="button bg-color-1 tx-color-1">+</td>
+            <td class="button bg-color-1 tx-color-1 sc-calc"><div>Ans</div></td>
+            <td class="button bg-color-1 tx-color-1 sc-calc"><div>EXP</div></td>
+            <td class="button bg-color-1 tx-color-1 sc-calc"><div>x<sup>y</sup></div></td>
+            <td class="button bg-color-2 tx-color-1"><div>0</div></td>
+            <td class="button bg-color-2 tx-color-1"><div>.</div></td>
+            <td class="button bg-color-3 tx-color-2"><div>=</div></td>
+            <td class="button bg-color-1 tx-color-1"><div>+</div></td>
           </tr>
         </table>
       </div>
