--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <div class="test">
         <table>
           <tr>
+            <!-- onClick時の名前 input_number -->
             <td class="button bg-color-1 tx-color-1 sc-calc"><div>Rad</div></td>
             <td class="button bg-color-1 tx-color-3 sc-calc"><div>Deg</div></td>
             <td class="button bg-color-1 tx-color-1 sc-calc"><div>x!</div></td>
@@ -40,27 +41,27 @@
             <td class="button bg-color-1 tx-color-1 sc-calc"><div>Inv</div></td>
             <td class="button bg-color-1 tx-color-1 sc-calc"><div>sin</div></td>
             <td class="button bg-color-1 tx-color-1 sc-calc"><div>ln</div></td>
-            <td class="button bg-color-2 tx-color-1"><div>7</div></td>
-            <td class="button bg-color-2 tx-color-1"><div>8</div></td>
-            <td class="button bg-color-2 tx-color-1"><div>9</div></td>
+            <td class="button bg-color-2 tx-color-1"><div onclick=get_number(this.innerHTML)>7</div></td>
+            <td class="button bg-color-2 tx-color-1"><div onclick=get_number(this.innerHTML)>8</div></td>
+            <td class="button bg-color-2 tx-color-1"><div onclick=get_number(this.innerHTML)>9</div></td>
             <td class="button bg-color-1 tx-color-1"><div>÷</div></td>
           </tr>
           <tr>
             <td class="button bg-color-1 tx-color-1 sc-calc"><div>π</div></td>
             <td class="button bg-color-1 tx-color-1 sc-calc"><div>cos</div></td>
             <td class="button bg-color-1 tx-color-1 sc-calc"><div>log</div></td>
-            <td class="button bg-color-2 tx-color-1"><div>4</div></td>
-            <td class="button bg-color-2 tx-color-1"><div>5</div></td>
-            <td class="button bg-color-2 tx-color-1"><div>6</div></td>
+            <td class="button bg-color-2 tx-color-1"><div onclick=get_number(this.innerHTML)>4</div></td>
+            <td class="button bg-color-2 tx-color-1"><div onclick=get_number(this.innerHTML)>5</div></td>
+            <td class="button bg-color-2 tx-color-1"><div onclick=get_number(this.innerHTML)>6</div></td>
             <td class="button bg-color-1 tx-color-1"><div>×</div></td>
           </tr>
           <tr>
             <td class="button bg-color-1 tx-color-1 sc-calc"><div>e</div></td>
             <td class="button bg-color-1 tx-color-1 sc-calc"><div>tan</div></td>
             <td class="button bg-color-1 tx-color-1 sc-calc"><div>√</div></td>
-            <td class="button bg-color-2 tx-color-1"><div>3</div></td>
-            <td class="button bg-color-2 tx-color-1"><div>2</div></td>
-            <td class="button bg-color-2 tx-color-1"><div>1</div></td>
+            <td class="button bg-color-2 tx-color-1"><div onclick=get_number(this.innerHTML)>3</div></td>
+            <td class="button bg-color-2 tx-color-1"><div onclick=get_number(this.innerHTML)>2</div></td>
+            <td class="button bg-color-2 tx-color-1"><div onclick=get_number(this.innerHTML)>1</div></td>
             <td class="button bg-color-1 tx-color-1"><div>−</div></td>
           </tr>
           <tr>
@@ -76,6 +77,8 @@
       </div>
     </div>
   </div>
+  <!-- JS 呼び出し -->
+  <script type="text/javascript" src="index.js"></script>
 </body>
 
 </html>
