AC CE の表示切り替え

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
             <td class="button bg-color-1 tx-color-1"><div>(</div></td>
             <td class="button bg-color-1 tx-color-1"><div>)</div></td>
             <td class="button bg-color-1 tx-color-1"><div onclick=updatePreview(this.innerHTML)>%</div></td>
-            <td class="button bg-color-1 tx-color-1"><div onclick=updatePreview(this.innerHTML)>AC</div></td>
+            <td class="button bg-color-1 tx-color-1"><div id="clear" onclick=updatePreview(this.innerHTML)>AC</div></td>
+
           </tr>
           <tr>
             <td class="button bg-color-1 tx-color-1 sc-calc"><div>Inv</div></td>
