--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 
     <div class="panel">
       <div class="history">
-
+        <div>アイコン</div>
+        <div>直前の履歴</div>
       </div>
       <div class="preview">
-        <input id="preview" type="text" value="0" class="hogehoge">
+        <input readonly id="preview" type="text" value="0" class="hogehoge">
       </div>
     </div>
 
@@ -28,7 +29,6 @@
       <div class="test">
         <table>
           <tr>
-            <!-- onClick時の名前 input_number -->
             <td class="button bg-color-1 tx-color-1 sc-calc"><div>Rad</div></td>
             <td class="button bg-color-1 tx-color-3 sc-calc"><div>Deg</div></td>
             <td class="button bg-color-1 tx-color-1 sc-calc"><div>x!</div></td>
