--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
             <td class="button bg-color-1 tx-color-1"><div>)</div></td>
             <td class="button bg-color-1 tx-color-1"><div onclick=updatePreview(this.innerHTML)>%</div></td>
             <td class="button bg-color-1 tx-color-1"><div id="clear" onclick=updatePreview(this.innerHTML)>AC</div></td>
-
           </tr>
           <tr>
             <td class="button bg-color-1 tx-color-1 sc-calc"><div>Inv</div></td>
@@ -45,7 +44,7 @@
             <td class="button bg-color-2 tx-color-1"><div onclick=updatePreview(this.innerHTML)>7</div></td>
             <td class="button bg-color-2 tx-color-1"><div onclick=updatePreview(this.innerHTML)>8</div></td>
             <td class="button bg-color-2 tx-color-1"><div onclick=updatePreview(this.innerHTML)>9</div></td>
-            <td class="button bg-color-1 tx-color-1"><div onclick=updatePreview(this.innerHTML)>÷</div></td>
+            <td class="button bg-color-1 tx-color-1"><div class="operator" onclick=updatePreview(this.innerHTML)>÷</div></td>
           </tr>
           <tr>
             <td class="button bg-color-1 tx-color-1 sc-calc"><div>π</div></td>
@@ -54,7 +53,7 @@
             <td class="button bg-color-2 tx-color-1"><div onclick=updatePreview(this.innerHTML)>4</div></td>
             <td class="button bg-color-2 tx-color-1"><div onclick=updatePreview(this.innerHTML)>5</div></td>
             <td class="button bg-color-2 tx-color-1"><div onclick=updatePreview(this.innerHTML)>6</div></td>
-            <td class="button bg-color-1 tx-color-1"><div onclick=updatePreview(this.innerHTML)>×</div></td>
+            <td class="button bg-color-1 tx-color-1"><div class="operator" onclick=updatePreview(this.innerHTML)>×</div></td>
           </tr>
           <tr>
             <td class="button bg-color-1 tx-color-1 sc-calc"><div>e</div></td>
@@ -63,15 +62,15 @@
             <td class="button bg-color-2 tx-color-1"><div onclick=updatePreview(this.innerHTML)>3</div></td>
             <td class="button bg-color-2 tx-color-1"><div onclick=updatePreview(this.innerHTML)>2</div></td>
             <td class="button bg-color-2 tx-color-1"><div onclick=updatePreview(this.innerHTML)>1</div></td>
-            <td class="button bg-color-1 tx-color-1"><div onclick=updatePreview(this.innerHTML)>−</div></td>
+            <td class="button bg-color-1 tx-color-1"><div class="operator" onclick=updatePreview(this.innerHTML)>−</div></td>
           </tr>
           <tr>
             <td class="button bg-color-1 tx-color-1 sc-calc"><div>Ans</div></td>
             <td class="button bg-color-1 tx-color-1 sc-calc"><div>EXP</div></td>
             <td class="button bg-color-1 tx-color-1 sc-calc"><div>x<sup>y</sup></div></td>
             <td class="button bg-color-2 tx-color-1"><div onclick=updatePreview(this.innerHTML)>0</div></td>
-            <td class="button bg-color-2 tx-color-1"><div onclick=updatePreview(this.innerHTML)>.</div></td>
-            <td class="button bg-color-3 tx-color-2"><div onclick=equal(this.innerHTML)>=</div></td>
+            <td class="button bg-color-2 tx-color-1"><div class="period" onclick=updatePreview(this.innerHTML)>.</div></td>
+            <td class="button bg-color-3 tx-color-2"><div class="equal" onclick=equal(this.innerHTML)>=</div></td>
             <td class="button bg-color-1 tx-color-1"><div onclick=updatePreview(this.innerHTML)>+</div></td>
           </tr>
         </table>
