--- a/index.html
+++ b/index.html
@@ -26,52 +26,52 @@
     </div>
 
     <div class="calc-buttons">
-      <div class="test">
+      <div>
         <table>
           <tr>
-            <td class="button bg-color-1 tx-color-1 sc-calc"><div>Rad</div></td>
-            <td class="button bg-color-1 tx-color-3 sc-calc"><div>Deg</div></td>
-            <td class="button bg-color-1 tx-color-1 sc-calc"><div>x!</div></td>
-            <td class="button bg-color-1 tx-color-1"><div>(</div></td>
-            <td class="button bg-color-1 tx-color-1"><div>)</div></td>
-            <td class="button bg-color-1 tx-color-1"><div onclick=updatePreview(this.innerHTML)>%</div></td>
-            <td class="button bg-color-1 tx-color-1"><div id="clear" onclick=updatePreview(this.innerHTML)>AC</div></td>
+            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">Rad</div></td>
+            <td class="button sc-calc"><div class="bg-color-1 tx-color-3">Deg</div></td>
+            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">x!</div></td>
+            <td class="button"><div class="bg-color-1 tx-color-1">(</div></td>
+            <td class="button"><div class="bg-color-1 tx-color-1">)</div></td>
+            <td class="button"><div class="bg-color-1 tx-color-1" onclick=updatePreview(this.innerHTML)>%</div></td>
+            <td class="button"><div class="bg-color-1 tx-color-1" id="clear" onclick=updatePreview(this.innerHTML)>AC</div></td>
           </tr>
           <tr>
-            <td class="button bg-color-1 tx-color-1 sc-calc"><div>Inv</div></td>
-            <td class="button bg-color-1 tx-color-1 sc-calc"><div>sin</div></td>
-            <td class="button bg-color-1 tx-color-1 sc-calc"><div>ln</div></td>
-            <td class="button bg-color-2 tx-color-1"><div onclick=updatePreview(this.innerHTML)>7</div></td>
-            <td class="button bg-color-2 tx-color-1"><div onclick=updatePreview(this.innerHTML)>8</div></td>
-            <td class="button bg-color-2 tx-color-1"><div onclick=updatePreview(this.innerHTML)>9</div></td>
-            <td class="button bg-color-1 tx-color-1"><div class="operator" onclick=updatePreview(this.innerHTML)>÷</div></td>
+            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">Inv</div></td>
+            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">sin</div></td>
+            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">ln</div></td>
+            <td class="button"><div class="bg-color-2 tx-color-1" onclick=updatePreview(this.innerHTML)>7</div></td>
+            <td class="button"><div class="bg-color-2 tx-color-1" onclick=updatePreview(this.innerHTML)>8</div></td>
+            <td class="button"><div class="bg-color-2 tx-color-1" onclick=updatePreview(this.innerHTML)>9</div></td>
+            <td class="button"><div class="operator bg-color-1 tx-color-1" onclick=updatePreview(this.innerHTML)>÷</div></td>
           </tr>
           <tr>
-            <td class="button bg-color-1 tx-color-1 sc-calc"><div>π</div></td>
-            <td class="button bg-color-1 tx-color-1 sc-calc"><div>cos</div></td>
-            <td class="button bg-color-1 tx-color-1 sc-calc"><div>log</div></td>
-            <td class="button bg-color-2 tx-color-1"><div onclick=updatePreview(this.innerHTML)>4</div></td>
-            <td class="button bg-color-2 tx-color-1"><div onclick=updatePreview(this.innerHTML)>5</div></td>
-            <td class="button bg-color-2 tx-color-1"><div onclick=updatePreview(this.innerHTML)>6</div></td>
-            <td class="button bg-color-1 tx-color-1"><div class="operator" onclick=updatePreview(this.innerHTML)>×</div></td>
+            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">π</div></td>
+            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">cos</div></td>
+            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">log</div></td>
+            <td class="button"><div class="bg-color-2 tx-color-1" onclick=updatePreview(this.innerHTML)>4</div></td>
+            <td class="button"><div class="bg-color-2 tx-color-1" onclick=updatePreview(this.innerHTML)>5</div></td>
+            <td class="button"><div class="bg-color-2 tx-color-1" onclick=updatePreview(this.innerHTML)>6</div></td>
+            <td class="button"><div class="operator bg-color-1 tx-color-1" onclick=updatePreview(this.innerHTML)>×</div></td>
           </tr>
           <tr>
-            <td class="button bg-color-1 tx-color-1 sc-calc"><div>e</div></td>
-            <td class="button bg-color-1 tx-color-1 sc-calc"><div>tan</div></td>
-            <td class="button bg-color-1 tx-color-1 sc-calc"><div>√</div></td>
-            <td class="button bg-color-2 tx-color-1"><div onclick=updatePreview(this.innerHTML)>3</div></td>
-            <td class="button bg-color-2 tx-color-1"><div onclick=updatePreview(this.innerHTML)>2</div></td>
-            <td class="button bg-color-2 tx-color-1"><div onclick=updatePreview(this.innerHTML)>1</div></td>
-            <td class="button bg-color-1 tx-color-1"><div class="operator" onclick=updatePreview(this.innerHTML)>−</div></td>
+            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">e</div></td>
+            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">tan</div></td>
+            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">√</div></td>
+            <td class="button"><div class="bg-color-2 tx-color-1" onclick=updatePreview(this.innerHTML)>3</div></td>
+            <td class="button"><div class="bg-color-2 tx-color-1" onclick=updatePreview(this.innerHTML)>2</div></td>
+            <td class="button"><div class="bg-color-2 tx-color-1" onclick=updatePreview(this.innerHTML)>1</div></td>
+            <td class="button"><div class="operator bg-color-1 tx-color-1" onclick=updatePreview(this.innerHTML)>−</div></td>
           </tr>
           <tr>
-            <td class="button bg-color-1 tx-color-1 sc-calc"><div>Ans</div></td>
-            <td class="button bg-color-1 tx-color-1 sc-calc"><div>EXP</div></td>
-            <td class="button bg-color-1 tx-color-1 sc-calc"><div>x<sup>y</sup></div></td>
-            <td class="button bg-color-2 tx-color-1"><div onclick=updatePreview(this.innerHTML)>0</div></td>
-            <td class="button bg-color-2 tx-color-1"><div class="period" onclick=updatePreview(this.innerHTML)>.</div></td>
-            <td class="button bg-color-3 tx-color-2"><div class="equal" onclick=equal(this.innerHTML)>=</div></td>
-            <td class="button bg-color-1 tx-color-1"><div onclick=updatePreview(this.innerHTML)>+</div></td>
+            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">Ans</div></td>
+            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">EXP</div></td>
+            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">x<sup>y</sup></div></td>
+            <td class="button"><div class="bg-color-2 tx-color-1" onclick=updatePreview(this.innerHTML)>0</div></td>
+            <td class="button"><div class="period bg-color-2 tx-color-1" onclick=updatePreview(this.innerHTML)>.</div></td>
+            <td class="button"><div class="equal bg-color-3 tx-color-2" onclick=equal(this.innerHTML)>=</div></td>
+            <td class="button"><div class="bg-color-1 tx-color-1" onclick=updatePreview(this.innerHTML)>+</div></td>
           </tr>
         </table>
       </div>
