--- a/index.html
+++ b/index.html
@@ -29,49 +29,49 @@
       <div>
         <table>
           <tr>
-            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">Rad</div></td>
-            <td class="button sc-calc"><div class="bg-color-1 tx-color-3">Deg</div></td>
-            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">x!</div></td>
-            <td class="button"><div class="bg-color-1 tx-color-1">(</div></td>
-            <td class="button"><div class="bg-color-1 tx-color-1">)</div></td>
-            <td class="button"><div class="bg-color-1 tx-color-1" onclick=updatePreview(this.innerHTML)>%</div></td>
-            <td class="button"><div class="bg-color-1 tx-color-1" id="clear" onclick=updatePreview(this.innerHTML)>AC</div></td>
+            <td class="sc-calc"><div class="color1">Rad</div></td>
+            <td class="sc-calc"><div class="color3">Deg</div></td>
+            <td class="sc-calc"><div class="color1">x!</div></td>
+            <td><div class="color1">(</div></td>
+            <td><div class="color1">)</div></td>
+            <td><div class="color1" onclick=updatePreview(this.innerHTML)>%</div></td>
+            <td><div class="color1 font2" id="clear" onclick=updatePreview(this.innerHTML)>AC</div></td>
           </tr>
           <tr>
-            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">Inv</div></td>
-            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">sin</div></td>
-            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">ln</div></td>
-            <td class="button"><div class="bg-color-2 tx-color-1" onclick=updatePreview(this.innerHTML)>7</div></td>
-            <td class="button"><div class="bg-color-2 tx-color-1" onclick=updatePreview(this.innerHTML)>8</div></td>
-            <td class="button"><div class="bg-color-2 tx-color-1" onclick=updatePreview(this.innerHTML)>9</div></td>
-            <td class="button"><div class="operator bg-color-1 tx-color-1" onclick=updatePreview(this.innerHTML)>÷</div></td>
+            <td class="sc-calc"><div class="color1">Inv</div></td>
+            <td class="sc-calc"><div class="color1">sin</div></td>
+            <td class="sc-calc"><div class="color1">ln</div></td>
+            <td><div class="color2" onclick=updatePreview(this.innerHTML)>7</div></td>
+            <td><div class="color2" onclick=updatePreview(this.innerHTML)>8</div></td>
+            <td><div class="color2" onclick=updatePreview(this.innerHTML)>9</div></td>
+            <td><div class="color1 font3" onclick=updatePreview(this.innerHTML)>÷</div></td>
           </tr>
           <tr>
-            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">π</div></td>
-            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">cos</div></td>
-            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">log</div></td>
-            <td class="button"><div class="bg-color-2 tx-color-1" onclick=updatePreview(this.innerHTML)>4</div></td>
-            <td class="button"><div class="bg-color-2 tx-color-1" onclick=updatePreview(this.innerHTML)>5</div></td>
-            <td class="button"><div class="bg-color-2 tx-color-1" onclick=updatePreview(this.innerHTML)>6</div></td>
-            <td class="button"><div class="operator bg-color-1 tx-color-1" onclick=updatePreview(this.innerHTML)>×</div></td>
+            <td class="sc-calc"><div class="color1">π</div></td>
+            <td class="sc-calc"><div class="color1">cos</div></td>
+            <td class="sc-calc"><div class="color1">log</div></td>
+            <td><div class="color2" onclick=updatePreview(this.innerHTML)>4</div></td>
+            <td><div class="color2" onclick=updatePreview(this.innerHTML)>5</div></td>
+            <td><div class="color2" onclick=updatePreview(this.innerHTML)>6</div></td>
+            <td><div class="color1 font3" onclick=updatePreview(this.innerHTML)>×</div></td>
           </tr>
           <tr>
-            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">e</div></td>
-            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">tan</div></td>
-            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">√</div></td>
-            <td class="button"><div class="bg-color-2 tx-color-1" onclick=updatePreview(this.innerHTML)>3</div></td>
-            <td class="button"><div class="bg-color-2 tx-color-1" onclick=updatePreview(this.innerHTML)>2</div></td>
-            <td class="button"><div class="bg-color-2 tx-color-1" onclick=updatePreview(this.innerHTML)>1</div></td>
-            <td class="button"><div class="operator bg-color-1 tx-color-1" onclick=updatePreview(this.innerHTML)>−</div></td>
+            <td class="sc-calc"><div class="color1">e</div></td>
+            <td class="sc-calc"><div class="color1">tan</div></td>
+            <td class="sc-calc"><div class="color1">√</div></td>
+            <td><div class="color2" onclick=updatePreview(this.innerHTML)>3</div></td>
+            <td><div class="color2" onclick=updatePreview(this.innerHTML)>2</div></td>
+            <td><div class="color2" onclick=updatePreview(this.innerHTML)>1</div></td>
+            <td><div class="color1 font3" onclick=updatePreview(this.innerHTML)>−</div></td>
           </tr>
           <tr>
-            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">Ans</div></td>
-            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">EXP</div></td>
-            <td class="button sc-calc"><div class="bg-color-1 tx-color-1">x<sup>y</sup></div></td>
-            <td class="button"><div class="bg-color-2 tx-color-1" onclick=updatePreview(this.innerHTML)>0</div></td>
-            <td class="button"><div class="period bg-color-2 tx-color-1" onclick=updatePreview(this.innerHTML)>.</div></td>
-            <td class="button"><div class="equal bg-color-3 tx-color-2" onclick=equal(this.innerHTML)>=</div></td>
-            <td class="button"><div class="bg-color-1 tx-color-1" onclick=updatePreview(this.innerHTML)>+</div></td>
+            <td class="sc-calc"><div class="color1">Ans</div></td>
+            <td class="sc-calc"><div class="color1">EXP</div></td>
+            <td class="sc-calc"><div class="color1">x<sup>y</sup></div></td>
+            <td><div class="color2" onclick=updatePreview(this.innerHTML)>0</div></td>
+            <td><div class="color2 font1" onclick=updatePreview(this.innerHTML)>.</div></td>
+            <td><div class="color4 font1" onclick=equal(this.innerHTML)>=</div></td>
+            <td><div class="color1 font3" onclick=updatePreview(this.innerHTML)>+</div></td>
           </tr>
         </table>
       </div>
