table のスタイル用クラス追加

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
               <span class="material-icons-outlined icon-2">history</span>
               <div class="modal">計算した内容や結果がここに表示され、再度使用できます</div>
               <table id="history-table">
-
+                <tbody>
+                  <!-- tr, td は JS 側で生成-->
+                </tbody>
               </table>
             </div>
           </div>
@@ -38,51 +40,53 @@
     <div class="calc-buttons">
       <div>
         <table>
-          <tr>
-            <td class="sc-calc"><div class="color1">Rad</div></td>
-            <td class="sc-calc"><div class="color3">Deg</div></td>
-            <td class="sc-calc"><div class="color1">x!</div></td>
-            <td><div class="color1">(</div></td>
-            <td><div class="color1">)</div></td>
-            <td><div class="color1" onclick=updatePreview(this.innerHTML)>%</div></td>
-            <td><div class="color1 font2" id="clear" onclick=updatePreview(this.innerHTML)>AC</div></td>
-          </tr>
-          <tr>
-            <td class="sc-calc"><div class="color1">Inv</div></td>
-            <td class="sc-calc"><div class="color1">sin</div></td>
-            <td class="sc-calc"><div class="color1">ln</div></td>
-            <td><div class="color2" onclick=updatePreview(this.innerHTML)>7</div></td>
-            <td><div class="color2" onclick=updatePreview(this.innerHTML)>8</div></td>
-            <td><div class="color2" onclick=updatePreview(this.innerHTML)>9</div></td>
-            <td><div class="color1 font3" onclick=updatePreview(this.innerHTML)>÷</div></td>
-          </tr>
-          <tr>
-            <td class="sc-calc"><div class="color1">π</div></td>
-            <td class="sc-calc"><div class="color1">cos</div></td>
-            <td class="sc-calc"><div class="color1">log</div></td>
-            <td><div class="color2" onclick=updatePreview(this.innerHTML)>4</div></td>
-            <td><div class="color2" onclick=updatePreview(this.innerHTML)>5</div></td>
-            <td><div class="color2" onclick=updatePreview(this.innerHTML)>6</div></td>
-            <td><div class="color1 font3" onclick=updatePreview(this.innerHTML)>×</div></td>
-          </tr>
-          <tr>
-            <td class="sc-calc"><div class="color1">e</div></td>
-            <td class="sc-calc"><div class="color1">tan</div></td>
-            <td class="sc-calc"><div class="color1">√</div></td>
-            <td><div class="color2" onclick=updatePreview(this.innerHTML)>3</div></td>
-            <td><div class="color2" onclick=updatePreview(this.innerHTML)>2</div></td>
-            <td><div class="color2" onclick=updatePreview(this.innerHTML)>1</div></td>
-            <td><div class="color1 font3" onclick=updatePreview(this.innerHTML)>−</div></td>
-          </tr>
-          <tr>
-            <td class="sc-calc"><div class="color1">Ans</div></td>
-            <td class="sc-calc"><div class="color1">EXP</div></td>
-            <td class="sc-calc"><div class="color1">x<sup>y</sup></div></td>
-            <td><div class="color2" onclick=updatePreview(this.innerHTML)>0</div></td>
-            <td><div class="color2 font1" onclick=updatePreview(this.innerHTML)>.</div></td>
-            <td><div class="color4 font1" onclick=equal(this.innerHTML)>=</div></td>
-            <td><div class="color1 font3" onclick=updatePreview(this.innerHTML)>+</div></td>
-          </tr>
+          <tbody>
+            <tr>
+              <td class="sc-calc"><div class="color1">Rad</div></td>
+              <td class="sc-calc"><div class="color3">Deg</div></td>
+              <td class="sc-calc"><div class="color1">x!</div></td>
+              <td><div class="color1">(</div></td>
+              <td><div class="color1">)</div></td>
+              <td><div class="color1" onclick=updatePreview(this.innerHTML)>%</div></td>
+              <td><div class="color1 font2" id="clear" onclick=updatePreview(this.innerHTML)>AC</div></td>
+            </tr>
+            <tr>
+              <td class="sc-calc"><div class="color1">Inv</div></td>
+              <td class="sc-calc"><div class="color1">sin</div></td>
+              <td class="sc-calc"><div class="color1">ln</div></td>
+              <td><div class="color2" onclick=updatePreview(this.innerHTML)>7</div></td>
+              <td><div class="color2" onclick=updatePreview(this.innerHTML)>8</div></td>
+              <td><div class="color2" onclick=updatePreview(this.innerHTML)>9</div></td>
+              <td><div class="color1 font3" onclick=updatePreview(this.innerHTML)>÷</div></td>
+            </tr>
+            <tr>
+              <td class="sc-calc"><div class="color1">π</div></td>
+              <td class="sc-calc"><div class="color1">cos</div></td>
+              <td class="sc-calc"><div class="color1">log</div></td>
+              <td><div class="color2" onclick=updatePreview(this.innerHTML)>4</div></td>
+              <td><div class="color2" onclick=updatePreview(this.innerHTML)>5</div></td>
+              <td><div class="color2" onclick=updatePreview(this.innerHTML)>6</div></td>
+              <td><div class="color1 font3" onclick=updatePreview(this.innerHTML)>×</div></td>
+            </tr>
+            <tr>
+              <td class="sc-calc"><div class="color1">e</div></td>
+              <td class="sc-calc"><div class="color1">tan</div></td>
+              <td class="sc-calc"><div class="color1">√</div></td>
+              <td><div class="color2" onclick=updatePreview(this.innerHTML)>3</div></td>
+              <td><div class="color2" onclick=updatePreview(this.innerHTML)>2</div></td>
+              <td><div class="color2" onclick=updatePreview(this.innerHTML)>1</div></td>
+              <td><div class="color1 font3" onclick=updatePreview(this.innerHTML)>−</div></td>
+            </tr>
+            <tr>
+              <td class="sc-calc"><div class="color1">Ans</div></td>
+              <td class="sc-calc"><div class="color1">EXP</div></td>
+              <td class="sc-calc"><div class="color1">x<sup>y</sup></div></td>
+              <td><div class="color2" onclick=updatePreview(this.innerHTML)>0</div></td>
+              <td><div class="color2 font1" onclick=updatePreview(this.innerHTML)>.</div></td>
+              <td><div class="color4 font1" onclick=equal(this.innerHTML)>=</div></td>
+              <td><div class="color1 font3" onclick=updatePreview(this.innerHTML)>+</div></td>
+            </tr>
+          </tbody>
         </table>
       </div>
     </div>
