履歴アイコンクリックでモーダル表示

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="panel">
       <div class="history">
         <div class="history-panel">
-          <span class="material-icons-outlined icon-1">history</span>
-          <div class="modal-wrapper">
+          <span class="material-icons-outlined icon-1" onclick=openModal()>history</span>
+          <div id="modal-wrapper">
             <div class="modal-position">
               <span class="material-icons-outlined icon-2">history</span>
               <div class="modal">計算した内容や結果がここに表示され、再度使用できます</div>
