--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <div class="panel">
       <div class="history">
         <div class="history-panel">
-          <span class="material-icons-outlined icon-1" onclick=openModal()>history</span>
-          <div id="modal">
+          <span class="material-icons-outlined icon-1" onclick=openModal(event)>history</span>
+          <div id="modal" onclick=openModal(event)>
             <div class="modal-position">
-              <span class="material-icons-outlined icon-2" onclick=closeModal()>history</span>
-              <div class="modal-text">計算した内容や結果がここに表示され、再度使用できます</div>
+              <span class="material-icons-outlined icon-2" onclick=closeModal(event)>history</span>
+              <div id="modal-text">計算した内容や結果がここに表示され、再度使用できます</div>
               <div id="history-table">
                 <!-- td は JS 側で生成 tbody tr は無し -->
               </div>
@@ -28,7 +28,7 @@
           </div>
         </div>
         
-        <div id="prev-history">Ans = 0</div>
+        <div id="prev-history"></div>
       </div>
       <div class="preview">
         <input readonly id="preview" type="text" value="0" class="expression">
