リファクタする

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <td class="sc-calc"><div class="color1">x<sup>y</sup></div></td>
               <td><div class="color2" onclick=updatePreview(this.innerHTML)>0</div></td>
               <td><div class="color2 font1" onclick=updatePreview(this.innerHTML)>.</div></td>
-              <td><div class="color4 font1" onclick=equal(this.innerHTML)>=</div></td>
+              <td><div class="color4 font1" onclick=updatePreview(this.innerHTML)>=</div></td>
               <td><div class="color1 font3" onclick=updatePreview(this.innerHTML)>+</div></td>
             </tr>
           </tbody>
@@ -89,6 +89,7 @@
       </div>
     </div>
   </div>
+
   <!-- JS 呼び出し -->
   <script type="text/javascript" src="index.js"></script>
 </body>
