--- a/index.html
+++ b/index.html
@@ -45,44 +45,44 @@
               <td class="sc-calc"><div class="color1">x!</div></td>
               <td><div class="color1">(</div></td>
               <td><div class="color1">)</div></td>
-              <td><div class="color1" onclick=updatePreview(this.innerHTML)>%</div></td>
-              <td><div class="color1 font2" id="clear" onclick=updatePreview(this.innerHTML)>AC</div></td>
+              <td><div class="color1" onclick=clickPercent(this.innerHTML)>%</div></td>
+              <td><div class="color1 font2" id="clear" onclick=clickClear(this.innerHTML)>AC</div></td>
             </tr>
             <tr>
               <td class="sc-calc"><div class="color1">Inv</div></td>
               <td class="sc-calc"><div class="color1">sin</div></td>
               <td class="sc-calc"><div class="color1">ln</div></td>
-              <td><div class="color2" onclick=updatePreview(this.innerHTML)>7</div></td>
-              <td><div class="color2" onclick=updatePreview(this.innerHTML)>8</div></td>
-              <td><div class="color2" onclick=updatePreview(this.innerHTML)>9</div></td>
-              <td><div class="color1 font3" onclick=updatePreview(this.innerHTML)>÷</div></td>
+              <td><div class="color2" onclick=clickNumber(this.innerHTML)>7</div></td>
+              <td><div class="color2" onclick=clickNumber(this.innerHTML)>8</div></td>
+              <td><div class="color2" onclick=clickNumber(this.innerHTML)>9</div></td>
+              <td><div class="color1 font3" onclick=clickOperator(this.innerHTML)>÷</div></td>
             </tr>
             <tr>
               <td class="sc-calc"><div class="color1">π</div></td>
               <td class="sc-calc"><div class="color1">cos</div></td>
               <td class="sc-calc"><div class="color1">log</div></td>
-              <td><div class="color2" onclick=updatePreview(this.innerHTML)>4</div></td>
-              <td><div class="color2" onclick=updatePreview(this.innerHTML)>5</div></td>
-              <td><div class="color2" onclick=updatePreview(this.innerHTML)>6</div></td>
-              <td><div class="color1 font3" onclick=updatePreview(this.innerHTML)>×</div></td>
+              <td><div class="color2" onclick=clickNumber(this.innerHTML)>4</div></td>
+              <td><div class="color2" onclick=clickNumber(this.innerHTML)>5</div></td>
+              <td><div class="color2" onclick=clickNumber(this.innerHTML)>6</div></td>
+              <td><div class="color1 font3" onclick=clickOperator(this.innerHTML)>×</div></td>
             </tr>
             <tr>
               <td class="sc-calc"><div class="color1">e</div></td>
               <td class="sc-calc"><div class="color1">tan</div></td>
               <td class="sc-calc"><div class="color1">√</div></td>
-              <td><div class="color2" onclick=updatePreview(this.innerHTML)>3</div></td>
-              <td><div class="color2" onclick=updatePreview(this.innerHTML)>2</div></td>
-              <td><div class="color2" onclick=updatePreview(this.innerHTML)>1</div></td>
-              <td><div class="color1 font3" onclick=updatePreview(this.innerHTML)>−</div></td>
+              <td><div class="color2" onclick=clickNumber(this.innerHTML)>1</div></td>
+              <td><div class="color2" onclick=clickNumber(this.innerHTML)>2</div></td>
+              <td><div class="color2" onclick=clickNumber(this.innerHTML)>3</div></td>
+              <td><div class="color1 font3" onclick=clickOperator(this.innerHTML)>−</div></td>
             </tr>
             <tr>
               <td class="sc-calc"><div class="color1">Ans</div></td>
               <td class="sc-calc"><div class="color1">EXP</div></td>
               <td class="sc-calc"><div class="color1">x<sup>y</sup></div></td>
-              <td><div class="color2" onclick=updatePreview(this.innerHTML)>0</div></td>
-              <td><div class="color2 font1" onclick=updatePreview(this.innerHTML)>.</div></td>
-              <td><div class="color4 font1" onclick=updatePreview(this.innerHTML)>=</div></td>
-              <td><div class="color1 font3" onclick=updatePreview(this.innerHTML)>+</div></td>
+              <td><div class="color2" onclick=clickNumber(this.innerHTML)>0</div></td>
+              <td><div class="color2 font1" onclick=clickPeriod(this.innerHTML)>.</div></td>
+              <td><div class="color4 font1" onclick=clickEqual(this.innerHTML)>=</div></td>
+              <td><div class="color1 font3" onclick=clickOperator(this.innerHTML)>+</div></td>
             </tr>
           </tbody>
         </table>
