--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div>
         <table>
           <tbody>
-            <tr>
+            <tr class="btn-tr">
               <td class="sc-calc"><div class="color1">Rad</div></td>
               <td class="sc-calc"><div class="color3">Deg</div></td>
               <td class="sc-calc"><div class="color1">x!</div></td>
@@ -48,7 +48,7 @@
               <td><div class="color1" onclick=clickPercent(this.innerHTML)>%</div></td>
               <td><div class="color1 font2" id="clear" onclick=clickClear(this.innerHTML)>AC</div></td>
             </tr>
-            <tr>
+            <tr class="btn-tr">
               <td class="sc-calc"><div class="color1">Inv</div></td>
               <td class="sc-calc"><div class="color1">sin</div></td>
               <td class="sc-calc"><div class="color1">ln</div></td>
@@ -57,7 +57,7 @@
               <td><div class="color2" onclick=clickNumber(this.innerHTML)>9</div></td>
               <td><div class="color1 font3" onclick=clickOperator(this.innerHTML)>÷</div></td>
             </tr>
-            <tr>
+            <tr class="btn-tr">
               <td class="sc-calc"><div class="color1">π</div></td>
               <td class="sc-calc"><div class="color1">cos</div></td>
               <td class="sc-calc"><div class="color1">log</div></td>
@@ -66,7 +66,7 @@
               <td><div class="color2" onclick=clickNumber(this.innerHTML)>6</div></td>
               <td><div class="color1 font3" onclick=clickOperator(this.innerHTML)>×</div></td>
             </tr>
-            <tr>
+            <tr class="btn-tr">
               <td class="sc-calc"><div class="color1">e</div></td>
               <td class="sc-calc"><div class="color1">tan</div></td>
               <td class="sc-calc"><div class="color1">√</div></td>
@@ -75,7 +75,7 @@
               <td><div class="color2" onclick=clickNumber(this.innerHTML)>3</div></td>
               <td><div class="color1 font3" onclick=clickOperator(this.innerHTML)>−</div></td>
             </tr>
-            <tr>
+            <tr class="btn-tr">
               <td class="sc-calc"><div class="color1">Ans</div></td>
               <td class="sc-calc"><div class="color1">EXP</div></td>
               <td class="sc-calc"><div class="color1">x<sup>y</sup></div></td>
