ボタンのボーダー設定

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="panel">
       <div class="history">
         <div class="history-panel">
-          <span class="material-icons-outlined icon-1" onclick=openModal(event)>history</span>
+          <span class="material-icons-outlined icon-1 his" onclick=openModal(event)>history</span>
           <div id="modal" onclick=openModal(event)>
             <div class="modal-position">
               <span class="material-icons-outlined icon-2" onclick=closeModal(event)>history</span>
