--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <span class="material-icons-outlined icon-1 his" onclick=openModal(event)>history</span>
           <div id="modal" onclick=openModal(event)>
             <div class="modal-position">
-              <span class="material-icons-outlined icon-2" onclick=closeModal(event)>history</span>
+              <span id="history-modal-icon" class="material-icons-outlined icon-2" onclick=closeModal(event)>history</span>
               <div id="modal-text">計算した内容や結果がここに表示され、再度使用できます</div>
               <div id="history-table">
                 <!-- td は JS 側で生成 tbody tr は無し -->
