preview css の調整

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div id="main" class="main">
 
-    <div class="panel">
+    <div class="panel" id="panel">
       <div class="history">
         <div class="history-panel">
           <span class="material-icons-outlined icon-1 his" onclick=openModal(event)>history</span>
@@ -45,44 +45,44 @@
               <td class="sc-calc"><div class="color1">x!</div></td>
               <td><div class="color1">(</div></td>
               <td><div class="color1">)</div></td>
-              <td><div class="color1" onclick=clickPercent(this.innerHTML)>%</div></td>
-              <td><div class="color1 font2" id="clear" onclick=clickClear(this.innerHTML)>AC</div></td>
+              <td><div class="color1" onclick="clickPercent(this.innerHTML, arguments[0])">%</div></td>
+              <td><div class="color1 font2" id="clear" onclick="clickClear(this.innerHTML, arguments[0])">AC</div></td>
             </tr>
             <tr class="btn-tr">
               <td class="sc-calc"><div class="color1">Inv</div></td>
               <td class="sc-calc"><div class="color1">sin</div></td>
               <td class="sc-calc"><div class="color1">ln</div></td>
-              <td><div class="color2" onclick=clickNumber(this.innerHTML)>7</div></td>
-              <td><div class="color2" onclick=clickNumber(this.innerHTML)>8</div></td>
-              <td><div class="color2" onclick=clickNumber(this.innerHTML)>9</div></td>
-              <td><div class="color1 font3" onclick=clickOperator(this.innerHTML)>÷</div></td>
+              <td><div class="color2" onclick="clickNumber(this.innerHTML, arguments[0])">7</div></td>
+              <td><div class="color2" onclick="clickNumber(this.innerHTML, arguments[0])">8</div></td>
+              <td><div class="color2" onclick="clickNumber(this.innerHTML, arguments[0])">9</div></td>
+              <td><div class="color1 font3" onclick="clickOperator(this.innerHTML, arguments[0])">÷</div></td>
             </tr>
             <tr class="btn-tr">
               <td class="sc-calc"><div class="color1">π</div></td>
               <td class="sc-calc"><div class="color1">cos</div></td>
               <td class="sc-calc"><div class="color1">log</div></td>
-              <td><div class="color2" onclick=clickNumber(this.innerHTML)>4</div></td>
-              <td><div class="color2" onclick=clickNumber(this.innerHTML)>5</div></td>
-              <td><div class="color2" onclick=clickNumber(this.innerHTML)>6</div></td>
-              <td><div class="color1 font3" onclick=clickOperator(this.innerHTML)>×</div></td>
+              <td><div class="color2" onclick="clickNumber(this.innerHTML, arguments[0])">4</div></td>
+              <td><div class="color2" onclick="clickNumber(this.innerHTML, arguments[0])">5</div></td>
+              <td><div class="color2" onclick="clickNumber(this.innerHTML, arguments[0])">6</div></td>
+              <td><div class="color1 font3" onclick="clickOperator(this.innerHTML, arguments[0])">×</div></td>
             </tr>
             <tr class="btn-tr">
               <td class="sc-calc"><div class="color1">e</div></td>
               <td class="sc-calc"><div class="color1">tan</div></td>
               <td class="sc-calc"><div class="color1">√</div></td>
-              <td><div class="color2" onclick=clickNumber(this.innerHTML)>1</div></td>
-              <td><div class="color2" onclick=clickNumber(this.innerHTML)>2</div></td>
-              <td><div class="color2" onclick=clickNumber(this.innerHTML)>3</div></td>
-              <td><div class="color1 font3" onclick=clickOperator(this.innerHTML)>−</div></td>
+              <td><div class="color2" onclick="clickNumber(this.innerHTML, arguments[0])">1</div></td>
+              <td><div class="color2" onclick="clickNumber(this.innerHTML, arguments[0])">2</div></td>
+              <td><div class="color2" onclick="clickNumber(this.innerHTML, arguments[0])">3</div></td>
+              <td><div class="color1 font3" onclick="clickOperator(this.innerHTML, arguments[0])">−</div></td>
             </tr>
             <tr class="btn-tr">
               <td class="sc-calc"><div class="color1">Ans</div></td>
               <td class="sc-calc"><div class="color1">EXP</div></td>
               <td class="sc-calc"><div class="color1">x<sup>y</sup></div></td>
-              <td><div class="color2" onclick=clickNumber(this.innerHTML)>0</div></td>
-              <td><div class="color2 font1" onclick=clickPeriod(this.innerHTML)>.</div></td>
-              <td><div class="color4 font1" onclick=clickEqual(this.innerHTML)>=</div></td>
-              <td><div class="color1 font3" onclick=clickOperator(this.innerHTML)>+</div></td>
+              <td><div class="color2" onclick="clickNumber(this.innerHTML, arguments[0])">0</div></td>
+              <td><div class="color2 font1" onclick="clickPeriod(this.innerHTML, arguments[0])">.</div></td>
+              <td><div class="color4 font1" onclick="clickEqual(this.innerHTML, arguments[0])">=</div></td>
+              <td><div class="color1 font3" onclick="clickOperator(this.innerHTML, arguments[0])">+</div></td>
             </tr>
           </tbody>
         </table>
