--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
+  <!-- preview animation 用 cdn -->
+  <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script> -->
   <title>電卓</title>
 </head>
 
@@ -31,7 +33,8 @@
         <div id="prev-history"></div>
       </div>
       <div class="preview">
-        <input readonly id="preview" type="text" value="0" class="expression">
+        <span id="preview" class="expression">0</span>
+        <!-- <input readonly id="preview" type="text" value="0" class="expression"> -->
       </div>
     </div>
 
