--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <div id="main" class="main">
 
     <div class="panel" id="panel">
-      <div class="history">
+      <div class="l_flex history">
         <div class="history-panel">
           <span class="material-icons-outlined icon-1 his" onclick=openModal(event)>history</span>
           <div id="modal" onclick=openModal(event)>
